tests/baselines/reference/parserPublicBreak1.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserPublicBreak1.ts(1,1): error TS1128: Declaration or statement expected.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserPublicBreak1.ts (1 errors) ====
    public break;
    ~~~~~~
!!! error TS1128: Declaration or statement expected.
    